# MarineCarbonManagement

./: LICENSE  README.md  pyproject.toml
examples/00_echem_mcc/: run_simulation.py
examples/00_echem_mcc/inputs/: hopp_config.yaml
examples/00_echem_mcc/inputs/floris/: floris_input_osw_15MW.yaml
mcm/: echem_mcc.py
mcm/capture/: echem_mcc.py  echem_oae.py
mcm/utilities/: utilities.py  validators.py
tests/: test_echem_mcc.py
