[project]
name = "mcm"
description = "marine carbon management package"
version = "0.1.0"
license = {file = "LICENSE"}
authors = [
    { name = "Kaitlin Brunik", email = "kaitlin.brunik@nrel.gov" },
    { name = "James Niffenegger", email = "james.niffenegger@nrel.gov" }
]
dependencies = [
    "attrs",
    "matplotlib",
    "numpy",
    "pandas",
    "PyCO2SYS"
]
keywords = [
    "python3",
    "marine-carbon-removal",
    "direct-ocean-capture",
    "ocean-alkalinity-enhancement",
]
[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-subtests",
]
examples = ["hopp"]

all = ["hopp[develop,examples]"]